--- a/SharkGame/SharkGame.csproj
+++ b/SharkGame/SharkGame.csproj
@@ -7,7 +7,7 @@
     <Platform Condition=" '$(Platform)' == '' ">Windows Phone</Platform>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FruttiDiSpiaggia</RootNamespace>
+    <RootNamespace>SharkGame</RootNamespace>
     <AssemblyName>WindowsPhoneGame3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -75,6 +75,7 @@
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="ClassDiagram.cd" />
     <None Include="Properties\AppManifest.xml">
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
     </None>
@@ -92,9 +93,9 @@
       <Project>{AA6CB78E-9484-4843-8613-54CD2BF1E948}</Project>
       <Name>Farseer Physics XNA WP7</Name>
     </ProjectReference>
-    <ProjectReference Include="..\FruttiDiSpiaggiaContent\FruttiDiSpiaggiaContent.contentproj">
+    <ProjectReference Include="..\FruttiDiSpiaggiaContent\SharkGameContent.contentproj">
       <Project>{72FE8C3D-FD07-4726-847A-924E00A5A995}</Project>
-      <Name>FruttiDiSpiaggiaContent %28Content%29</Name>
+      <Name>SharkGameContent %28Content%29</Name>
       <XnaReferenceType>Content</XnaReferenceType>
     </ProjectReference>
   </ItemGroup>
